--- a/webapp/static/webapp/assets/css/style.css
+++ b/webapp/static/webapp/assets/css/style.css
@@ -122,17 +122,20 @@
 
 #review_nav a {
   display: inline-block;
-  padding: 3px 5px;
+  padding: 3px 10px;
   margin-right: 10px;
-  font-family: Tahoma;
-  background: #ccc;
+  background: rgb(255, 255, 255);
   color: #000;
   text-decoration: none;
+  font-weight: 600;
 }
 
 #review_nav a.active {
-  background: #333;
-  color: #fff;
+  background: rgb(89, 89, 253);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  
+ 
 }
 
 .info_review {
